--- a/bundle-2/items.yaml
+++ b/bundle-2/items.yaml
@@ -6,14 +6,17 @@ items:
   name: develop
   allItems:
   - develop/tiny_test
+  - develop/new_test
   allViews:
   - all:
       filterQueue: false
       allItems:
       - develop/tiny_test
+      - develop/new_test
       filterExecutors: false
       items:
       - develop/tiny_test
+      - develop/new_test
   description: ''
   displayName: develop
   properties:
