--- a/bundle-3/items.yaml
+++ b/bundle-3/items.yaml
@@ -2,21 +2,30 @@ removeStrategy:
   rbac: SYNC
   items: NONE
 items:
-- kind: "folder"
-  name: "another_test_folder"
-  allItems:
-  - another_test_folder/tiny_test
-  allViews:
-  - all:
-      filterQueue: false
-      allItems:
-      - another_test_folder/tiny_test
-      filterExecutors: false
-      items:
-      - another_test_folder/tiny_test
-  description: ''
-  displayName: "another_test_folder"
-  properties:
-  - envVars: {}
-  - itemRestrictions:
-      filter: false
+  - kind: "pipeline"
+    name: "project-beta-pipeline-job"
+    displayName: "Project Beta Pipeline job"
+    description: "This is Project Beta's Pipeline job!"
+    definition:
+      cpsScmFlowDefinition:
+        scriptPath: "Jenkinsfile"
+        scm:
+          gitSCM:
+            gitTool: "git"
+            userRemoteConfigs:
+              - userRemoteConfig:
+                  name: "developer-b"
+                  credentialsId: "credentials-id"
+                  url: "git@github.com:company/project-beta.git"
+            extensions:
+              - checkoutOption:
+                  timeout: 2
+              - cloneOption:
+                  reference: "/workspace/git"
+                  noTags: false
+                  honorRefspec: false
+                  shallow: true
+                  timeout: 5
+            branches:
+              - branchSpec:
+                  name: "*/main"
