--- a/bundle-3/jenkins.yaml
+++ b/bundle-3/jenkins.yaml
@@ -211,8 +211,8 @@ unclassified:
     reloadAlwaysOnRestart: false
     skipNewVersions: false
   cascItemsConfiguration:
-    variableInterpolationEnabledForAdmin: false
-    variableInterpolationEnabledForNonAdmin: false
+    variableInterpolationEnabledForAdmin: true
+    variableInterpolationEnabledForNonAdmin: true
   cloudBeesSCMReporting:
     enabled: true
   cloudbeesPipelineExplorer:
