--- a/bundle-3/items.yaml
+++ b/bundle-3/items.yaml
@@ -3,27 +3,43 @@ removeStrategy:
   items: NONE
 items:
 - kind: folder
-  name: testing
-  allItems:
-  - testing/blah
+  name: test_folder
   allViews:
   - all:
       filterQueue: false
-      allItems:
-      - testing/blah
       filterExecutors: false
-      items:
-      - testing/blah
   description: ''
-  displayName: blah
+  displayName: test_folder
   properties:
   - envVars: {}
   - itemRestrictions:
       filter: false
-    groups:
-    - name: "dev"
-      members:
-        internal_groups:
-        - dev
-      roles:
-        - name: "developer"
+- kind: folder
+  name: testing
+  allViews:
+  - all:
+      filterQueue: false
+      filterExecutors: false
+  description: ''
+  displayName: testing
+- kind: folder
+  name: Zach_folder
+  allItems:
+  - Zach_folder/test
+  allViews:
+  - all:
+      filterQueue: false
+      allItems:
+      - Zach_folder/test
+      filterExecutors: false
+      items:
+      - Zach_folder/test
+  displayName: Zach_folder
+  groups:
+  - members:
+      users:
+      - zach
+    roles:
+    - name: Developers
+      grantedAt: current
+    name: developers
