--- a/bundle-2/items.yaml
+++ b/bundle-2/items.yaml
@@ -3,20 +3,10 @@ removeStrategy:
   items: NONE
 items:
 - kind: folder
-  name: develop
-  allItems:
-  - develop/tiny_test
-  allViews:
-  - all:
-      filterQueue: false
-      allItems:
-      - develop/tiny_test
-      filterExecutors: false
-      items:
-      - develop/tiny_test
-  description: ''
-  displayName: develop
-  properties:
-  - envVars: {}
-  - itemRestrictions:
-      filter: false
+  name: testy
+  description: "folder for testing things"
+  displayName: "testy"
+  items:
+  - kind: pipeline
+    name: "tiny_test_pipe"
+    
