--- a/templates/build_jobs/template.yaml
+++ b/templates/build_jobs/template.yaml
@@ -1,8 +1,8 @@
 version: 1
 type: pipeline-template
 
-name: Java Maven App Pipeline Job
-description: Simple Java App With Maven
+name: job1
+description: job1
 parameters:
   - name: emailRecipient
     type: string
