--- a/templates/job1/Jenkinsfile
+++ b/templates/job1/Jenkinsfile
@@ -1,42 +1,11 @@
 pipeline {
-    agent any
-    
+    agent {label 'test-agent'}
+
     stages {
-        stage('Checkout') { 
+        stage('Hello') {
             steps {
-                git credentialsId: "${github_creds}" , url: "${github_repo}" 
-            }
-        }
-        stage('Build') { 
-            steps {
-                sh 'mvn -B -DskipTests clean package' 
+                echo 'Running Release Master'
             }
         }
     }
-
-    post {
-
-      // Email Ext plugin: 
-      success {  
-        
-        emailext (
-            subject: "SUCCESSFUL: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
-            body: """<p>SUCCESSFUL: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-              <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>""",
-            to: "${emailRecipient}",
-            from: "buildNotifications@emailaddress.com"
-          )
-      }
-
-      failure {
-        
-        emailext (
-            subject: "FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
-            body: """<p>FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-              <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>""",
-            to: "${emailRecipient}",
-            from: "buildNotifications@emailaddress.com"
-          )
-      }
-  }
 }
