--- a/templates/job2/Jenkinsfile
+++ b/templates/job2/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Hello') {
             steps {
-                echo 'Running Release Master'
+                echo 'Running job2'
             }
         }
     }
