--- a/catalog.yaml
+++ b/catalog.yaml
@@ -2,4 +2,4 @@ version: 1
 type: pipeline-template-catalog
 
 name: ci-release-catalog
-displayName: pipelines for controlling the release of production code
+displayName: ci-release-catalog
